2005-12-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (SummaryLabel.update_total): Use get_attribute 
	and always convert to float.

	* kiwi/ui/views.py (SlaveView): Add simple notebook 
	validation support. It'll mark the text of the labels
	red if there are any widgets inside which are mandatory
	or invalid. Fixes bug 2286.

2005-12-14  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/hyperlink/hyperlink_demo.py:
	* kiwi/ui/hyperlink.py:

2005-12-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/delegates.py (SlaveDelegate.__init__) 
	(Delegate.__init__): API Change,
	move keyactions to the end of the list, to be as compatible
	as possible with the parent klasses.

	* kiwi/ui/delegates.py:
	* kiwi/ui/views.py:
	Cleanups:
	- Make a few variables private, remove duplicated code.
	- Reorganize variables
	- Refactor functionallity to methods

2005-12-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py: Add support for check buttons
	in kiwi lists. Also emit cell-edited when changing a radio
	button.

	* kiwi/datatypes.py (currency): 
	(CurrencyConverter): 
	Add support for currency.
	(format_price): Use currency.format

	* kiwi/ui/widgets/list.py (List._cell_data_func): Add support for 
	currency here.

2005-12-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dialogs.py: Add dialogs, stolen and extended from gazpacho.

2005-12-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/common.py:
	* kiwi/ui/test/listener.py:
	* kiwi/ui/test/player.py:
	Add API documentation, almost complete now.
	Also add a timeout for accessing widgets, this will help us to handle
	situations where it takes some time for some widgets to be created.
	Also ignore eventual errors when the window is closed.
	Fix support for selection of multiple rows in KiwiList and
	add support for ComboBox.
	 
	* tools/epyrun:
	Do not ignore directories called test.
	